Add Python 2 and change URL.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pipyadc
 description = Python module for interfacing Texas Instruments SPI bus based analog- to-digital converters with the Raspberry Pi
-url = https://github.com/ul-gh/PiPyADC
+url = https://github.com/bleykauf/PiPyADC
 author = Ulrich Lukas
 maintainer = Bastian Leykauf
 maintainer_email = leykauf@physik.hu-berlin.de
