--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,12 @@ long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 classifiers =
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 2.7
     License :: OSI Approved :: GNU General Public License v2 (GPLv2)
     Operating System :: POSIX :: Linux
 
 [options]
-python_requires = >= 3.4
+python_requires = >= 2.7
 setup_requires =
     setuptools >= 38.3.0
 install_requires = 
