--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = pipyadc
 description = Python module for interfacing Texas Instruments SPI bus based analog- to-digital converters with the Raspberry Pi
 url = https://github.com/bleykauf/PiPyADC
 author = Ulrich Lukas
-maintainer = Bastian Leykauf
-maintainer_email = leykauf@physik.hu-berlin.de
+maintainer = Ulrich Lukas
+maintainer_email = ul-gh@datenparkplatz.de
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 classifiers =
