Tag version 1.0 for pypi release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pipyadc
 description = Python module for interfacing Texas Instruments SPI bus based analog- to-digital converters with the Raspberry Pi
-url = https://github.com/bleykauf/PiPyADC
+url = https://github.com/ul-gh/PiPyADC
 author = Ulrich Lukas
 maintainer = Ulrich Lukas
 maintainer_email = ul-gh@datenparkplatz.de
