--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifiers =
 python_requires =
     >= 3
 setup_requires =
+    versioneer-518
     setuptools >= 38.3.0
 install_requires = 
     pigpio
