specify LGPLv2 in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
+    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
     Operating System :: POSIX :: Linux
 
 [options]
